I added a new header as h1 and also did some styling on it using css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>BOOK</title>
 </head>
 <body>
+    <h1 class="main_header">
+        Just A Simple Story Design
+    </h1>
     
     <div class="container">
 
