I modified the main header title which is header1

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1 class="main_header">
-        Just A Simple Story Design
+        Just A Simple Story Design By Felix
     </h1>
     
     <div class="container">
